--- a/config.json
+++ b/config.json
@@ -2,26 +2,25 @@
   "repositories": {
     "repo1": {
       "name": "Sustainable_Shopping",
-      "description": "This is the first repository.",
+      "description": "This is a random repository.",
       "path": "/",
-      "branches": [
-        {
-          "branchname": "main",
+      "branches": {
+        "main": {
           "events": ["push", "pull_request"],
           "actions": {
             "action1": {
-              "name": "build",
-              "description": "Build the project",
-              "command": "git pull && npm install && npm run build"
-            },
-            "action2": {
-              "name": "test",
-              "description": "Run tests",
-              "command": "git pull && bash deploy.sh"
+              "name": "Build",
+              "description": "Pull and Build the project",
+              "commands": [
+                {
+                  "command-1": "git pull",
+                  "command-2": "cd front_end/sustainable_shop && npm install"
+                }
+              ]
             }
           }
         }
-      ]
+      }
     }
   }
 }
